--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ cache:
   directories:
   - node_modules
 script:
-  - npm i -g yarn
   - yarn run build
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  # github-token: GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
   on:
     branch: develop
   local-dir: build
