--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  # github-token: GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  #github-token: $github_token  # Set in travis-ci.org dashboard, marked secure
   on:
     branch: develop
   local-dir: build
