--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  #github-token: $github_token  # Set in travis-ci.org dashboard, marked secure
-  on:
-    branch: develop
   local-dir: build
   target-branch: master
+  keep-history:  true
+  github-token: $github_token  # Set in travis-ci.org dashboard, marked secure
+  on:
+    branch: develop
