--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build -b master"
+    "deploy": "gh-pages -d build -b master",
+    "gh-pages-help": "gh-pages --help"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
