--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   local-dir: build
   target-branch: master
   keep-history: true
-  github-token: "$github_token"
+  github-token: $github_token
   on:
     branch: develop
 env:
